Fix ie7 radio button text alignment

--- a/app/assets/stylesheets/ie7.sass
+++ b/app/assets/stylesheets/ie7.sass
@@ -20,6 +20,9 @@
     .row
       clear: both
 
+      input[type="checkbox"], input[type="radio"]
+        margin-top: 3px
+
     &.full
       legend
         position: relative
